<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <net.zhongbenshuo.wifiinterphone.widget.MyToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_call_toggle_speak"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@mipmap/ic_lock_ringer_on_alpha"
            android:contentDescription="@string/toggle_speak"
            android:gravity="center_vertical|center_horizontal" />

        <ImageButton
            android:id="@+id/button_call_toggle_mic"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:drawable/ic_btn_speak_now"
            android:contentDescription="@string/toggle_mic"
            android:gravity="center_vertical|center_horizontal" />

        <ImageButton
            android:id="@+id/button_call_disconnect"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@mipmap/disconnect"
            android:contentDescription="@string/disconnect_call"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

</LinearLayout>
