<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_slight"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <net.zhongbenshuo.wifiinterphone.widget.MyToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/textfield_normal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSpeakTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/TypeInTime"
            android:inputType="number"
            android:maxLength="8"
            android:maxLines="1"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="S" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_modify"
        style="@style/button_common_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:enabled="false"
        android:text="@string/ModifySpeakTime"
        android:textAllCaps="false"
        android:textColor="@color/white_alpha"
        android:textSize="@dimen/sp_18" />

</LinearLayout>
