<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/colorBluePrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivMiniUserIcon"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_10"
            android:scaleType="centerCrop"
            android:src="@drawable/photo_user"
            app:civ_border_color="#16F5F5F5"
            app:civ_border_width="@dimen/dp_2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ssid"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvSSID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvIp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_6"
            android:contentDescription="@null"
            android:src="@drawable/icon_right_setting" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvContacts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/contact"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tvWarning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/malfunction"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="horizontal">
            <!--实现顶部标题的横线指示器-->
            <ImageView
                android:id="@+id/ivTitleIndicator"
                android:layout_width="180dp"
                android:layout_height="2dp"
                android:contentDescription="@null"
                android:src="@color/colorBluePrimary" />
        </LinearLayout>

    </LinearLayout>

    <net.zhongbenshuo.wifiinterphone.widget.NoScrollViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" />

    <Button
        android:id="@+id/btnSpeak"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/speak_bt_select"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="20dp"
        android:text="@string/pressToSpeak"
        android:textColor="#000"
        android:textSize="18sp" />

</LinearLayout>