<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <net.zhongbenshuo.wifiinterphone.widget.MyToolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:titleText="@string/app_name" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="用户名:" />

            <TextView
                android:id="@+id/tv_roomId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="房间号:" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="360dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/remoteContainer"
                android:layout_width="match_parent"
                android:layout_height="360dp">

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/videoinitbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:id="@+id/buttons_videocall_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/Button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="jumpOnClick1"
                        android:text="添加用户" />

                    <Button
                        android:id="@+id/Button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="jumpOnClick1"
                        android:text="删除用户" />

                    <Button
                        android:id="@+id/Button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="jumpOnClick1"
                        android:text="屏幕共享" />

                    <Button
                        android:id="@+id/Button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="jumpOnClick1"
                        android:text="切换摄像头" />


                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/audio_list_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <LinearLayout
                        android:id="@+id/buttons_audiocall_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignWithParentIfMissing="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="2dp"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/button_call_toggle_speak"
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:background="@mipmap/ic_lock_ringer_on_alpha"
                            android:contentDescription="@string/toggle_speak"
                            android:gravity="center_vertical|center_horizontal" />

                        <ImageButton
                            android:id="@+id/button_call_toggle_mic"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@android:drawable/ic_btn_speak_now"
                            android:contentDescription="@string/toggle_mic"
                            android:gravity="center_vertical|center_horizontal" />

                        <ImageButton
                            android:id="@+id/button_call_disconnect"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@mipmap/disconnect"
                            android:contentDescription="@string/disconnect_call"
                            android:gravity="center_vertical|center_horizontal" />
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
